--- a/complete.html
+++ b/complete.html
@@ -10,7 +10,7 @@
    <h3>キャッチコピー</h3>
    <h4>About</h4>
    <p>COACHTECH(コーチテック)は、フリーランス特化型のオンラインコーチングプログラミングスクールです。</p>
-   <P>プログラミング未経験の方でも、<span>「独自のノウハウ」</span>でフリーランスエンジニアを目指すことができます。</P>  
+   <P>プログラミング未経験の方でも、<b>「独自のノウハウ」</b>でフリーランスエンジニアを目指すことができます。</P>  
    
       <h4>ブログ</h4>
       <img src="img/blog__eyecatch1.jpg"> 
