--- a/complete.html
+++ b/complete.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 <body>
+<div class="main">  
+
    <div class="catch-copy">
      <h3 class="catch-copy__ttl">キャッチコピー</h3>     
    </div>
@@ -70,6 +72,9 @@
      <button class="button__reset" type="reset" name="#" value="#">削除</button>
      <button class="button__submit" type="submit" name="#" value="#">送信</button>
    </div>
+
+</div>
+
 
 </body>
 </html>
